--- a/app/src/main/res/layout/main_screen.xml
+++ b/app/src/main/res/layout/main_screen.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -154,6 +155,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="-43dp"
         android:gravity="center"
+        app:backgroundTint="#056809"
         andriod:text="תשאלי שאלה!">
 
     </Button>
@@ -165,7 +167,9 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="-57dp"
         android:gravity="center"
+        app:backgroundTint="#056809"
         andriod:text="חיפוש">
+
 
     </Button>
 
