--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="green_background">#61CE70</color>
+    <color name="green">#B0DA7F</color>
+    <color name="darkgreen">#405A22</color>
 </resources>
