--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,36 +1,169 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:andriod="http://schemas.android.com/tools"
     android:orientation="vertical"
-    tools:context=".MainActivity">
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="addQuestionActivity"
-        android:text="add question" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="addErrorInAppActivity"
-        android:text="add error" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="searchQuestionActivity"
-        android:text="search questions" />
+    android:background="@color/green">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:id="@+id/name"
+        android:layout_width="match_parent"
+        android:layout_height="105dp"
+        android:gravity="center"
+        android:text="@string/app_name"
+        android:textColor="@color/darkgreen"
+        android:textSize="50sp">
+
+    </TextView>
+
+    <RelativeLayout
+        android:layout_width="61dp"
+        android:layout_height="58dp"
+        android:layout_marginStart="350dp"
+        android:layout_marginLeft="400dp">
+
+
+        <ImageButton
+            android:id="@+id/buttonMenu"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/green"
+            android:contentDescription="@string/menu"
+            android:onClick="MainMenu"
+            android:src="@drawable/ic_menu">
+
+
+        </ImageButton>
+
+    </RelativeLayout>
+
+
+    <LinearLayout
+        android:id="@+id/hotQuestions"
+        android:layout_width="327dp"
+        android:layout_height="411dp"
+        android:layout_alignBottom="@+id/ask"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="-444dp"
+        android:gravity="center_horizontal"
+        android:orientation="vertical"
+        andriod:background="@color/white"
+
+        >
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="51dp"
+            android:gravity="center"
+            android:text="@string/question"
+            android:textColor="@color/darkgreen"
+            android:textSize="20sp">
+
+        </TextView>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="51dp"
+            android:gravity="center"
+            android:text="@string/question"
+            android:textColor="@color/darkgreen"
+            android:textSize="20sp">
+
+        </TextView>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="51dp"
+            android:gravity="center"
+            android:text="@string/question"
+            android:textColor="@color/darkgreen"
+            android:textSize="20sp">
+
+        </TextView>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="51dp"
+            android:gravity="center"
+            android:text="@string/question"
+            android:textColor="@color/darkgreen"
+            android:textSize="20sp">
+
+        </TextView>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="51dp"
+            android:gravity="center"
+            android:text="@string/question"
+            android:textColor="@color/darkgreen"
+            android:textSize="20sp">
+
+        </TextView>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="51dp"
+            android:gravity="center"
+            android:text="@string/question"
+            android:textColor="@color/darkgreen"
+            android:textSize="20sp">
+
+        </TextView>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="51dp"
+            android:gravity="center"
+            android:text="@string/question"
+            android:textColor="@color/darkgreen"
+            android:textSize="20sp">
+
+        </TextView>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="51dp"
+            android:gravity="center"
+            android:text="@string/question"
+            android:textColor="@color/darkgreen"
+            android:textSize="20sp">
+
+        </TextView>
+
+
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/ask"
+        android:layout_width="208dp"
+        android:layout_height="37dp"
+        android:layout_alignBottom="@+id/name"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="-51dp"
+        android:gravity="center"
+        android:onClick="addQuestionActivity"
+        andriod:text="תשאלי שאלה!"
+        app:backgroundTint="#056809">
+
+    </Button>
+
+    <Button
+        android:layout_width="152dp"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-</LinearLayout>
+        android:layout_alignBottom="@+id/hotQuestions"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="-70dp"
+        android:gravity="center"
+        andriod:onClick="SearchQuestionActivity"
+        andriod:text="חיפוש"
+        app:backgroundTint="#056809">
+
+
+    </Button>
+
+
+</RelativeLayout>
