--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="green_background">#61CE70</color>
     <color name="green">#B0DA7F</color>
-    <color name="darkgreen">#405A22</color>
+    <color name="darkgreen">#056809</color>
 </resources>
