--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout 
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:andriod="http://schemas.android.com/tools"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:background="@color/green_background"
@@ -51,7 +50,7 @@
         android:layout_marginBottom="-444dp"
         android:gravity="center_horizontal"
         android:orientation="vertical"
-        andriod:background="@color/white"
+        android:background="@color/white"
 
         >
 
@@ -145,10 +144,9 @@
         android:layout_alignBottom="@+id/name"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="-50dp"
-        android:onClick="addQuestionActivity"
-        andriod:text="Ask a Question">
+        android:text="@string/ask"
+        android:onClick="addQuestionActivity"/>
 
-    </Button>
 
     <Button
         android:layout_width="152dp"
@@ -156,9 +154,8 @@
         android:layout_alignBottom="@+id/hotQuestions"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="-70dp"
-        android:onClick="searchQuestionActivity"
-        andriod:text="@string/search"
-        >
+        android:text="@string/search"
+        android:onClick="searchQuestionActivity">
 
 
     </Button>
