--- a/app/src/main/res/layout/activity_java_category.xml
+++ b/app/src/main/res/layout/activity_java_category.xml
@@ -6,7 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:background="@color/green_background"
-    tools:context=".MainActivity">
+    tools:context=".JavaCategory">
 
     <TextView
         android:id="@+id/name"
@@ -123,7 +123,6 @@
         android:layout_marginBottom="-50dp"
         android:text="@string/ask"
         android:onClick="addQuestionActivity"/>
-
 
     <Button
         android:layout_width="152dp"
