--- a/app/src/main/res/layout/main_menu.xml
+++ b/app/src/main/res/layout/main_menu.xml
@@ -2,7 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".MainMenu">
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
@@ -21,9 +23,51 @@
         <Button
             android:layout_width="match_parent"
             android:layout_height="71dp"
-            app:backgroundTint="@color/green">
-
+            app:backgroundTint="@color/green"
+            android:text="Java"
+            android:onClick="goToJava">
         </Button>
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="71dp"
+            app:backgroundTint="@color/green"
+            android:text="GIT"
+            android:onClick="goToGit">
+        </Button>
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="71dp"
+            app:backgroundTint="@color/green"
+            android:text="Python"
+            android:onClick="goToPython">
+        </Button>
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="71dp"
+            app:backgroundTint="@color/green"
+            android:text="Web"
+            android:onClick="goToWeb">
+        </Button>
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="71dp"
+            app:backgroundTint="@color/green"
+            android:text="Profile and Settings"
+            android:onClick="goToSettings">
+        </Button>
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="71dp"
+            app:backgroundTint="@color/green"
+            android:text="Report a problem"
+            android:onClick="goToErrors">
+        </Button>
+
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
