Add AnswersActivity, with list of answers and 'add answer button' Disable non admin access to AddErrorInAppActivity

--- a/app/src/main/res/layout/main_menu.xml
+++ b/app/src/main/res/layout/main_menu.xml
@@ -64,6 +64,7 @@
             android:layout_width="match_parent"
             android:layout_height="71dp"
             app:backgroundTint="@color/green"
+            android:id="@+id/reportProblemBtn"
             android:text="Report a problem"
             android:onClick="goToErrors">
         </Button>
